# agentura

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  ENGINEERING_BRAIN.md  GUARDRAILS.md  HACKATHON_PLAN.md  LICENSE  Makefile  PRODUCT_VISION.md  README.md  ROADMAP.md  SECURITY.md  Untitled  docker-compose.yml
agents/: pyproject.toml
agents/core/: __init__.py  types.py
sdk/: Dockerfile  README.md  pyproject.toml
sdk/agentura_sdk/: __init__.py  types.py
sdk/agentura_sdk/agency/: heartbeat.py  loader.py
sdk/agentura_sdk/cli/: apply_cmd.py  approve_cmd.py  ask_cmd.py  correct.py  cortex_cmd.py  create.py  deploy.py  describe_cmd.py  fleet_cmd.py  gateway.py  get_cmd.py  index_cmd.py  logs_cmd.py  main.py  memory_cmd.py  replay.py  run.py  status_cmd.py  test_cmd.py  validate.py  watch_cmd.py
sdk/agentura_sdk/cortex/: synthesizer.py
sdk/agentura_sdk/indexer/: __init__.py  detectors.py  generator.py  skill_mapper.py  summarizer.py
sdk/agentura_sdk/mcp/: __init__.py  client.py  registry.py
sdk/agentura_sdk/memory/: __init__.py  agent_store.py  fleet_store.py  heartbeat_store.py  json_store.py  mem0_store.py  pg_store.py  scoped_store.py  store.py  ticket_store.py
sdk/agentura_sdk/notifications/: __init__.py  slack.py
sdk/agentura_sdk/oauth/: providers.py
sdk/agentura_sdk/pipelines/: __init__.py  build_deploy.py  engine.py  github_client.py  github_pr.py  github_pr_parallel.py
sdk/agentura_sdk/runner/: agent_executor.py  claude_code_executor.py  config_loader.py  local_runner.py  openrouter.py  ptc_executor.py  router.py  skill_loader.py  skill_registry.py  verify.py
sdk/agentura_sdk/sandbox/: __init__.py  claude_code_worker.py  docker_sandbox.py  e2b_sandbox.py  ipc_protocol.py  k8s_file_sandbox.py  k8s_sandbox.py  ptc_worker.py
sdk/agentura_sdk/server/: app.py  auth.py  skill_watcher.py
sdk/agentura_sdk/store/: mcp_token_store.py
sdk/agentura_sdk/templates/: agent.yaml.j2  agentura.config.yaml.j2  decisions.md.j2  domain.md.j2  guardrails.md.j2  handler.go.j2  handler.py.j2  handler.ts.j2  soul.md.j2  test_deepeval.py.j2  test_promptfoo.yaml.j2
sdk/agentura_sdk/testing/: deepeval_runner.py  eval_runner.py  eval_types.py  failure_case_generator.py  incident_eval.py  mock_mcp_server.py  test_generator.py
sdk/aspora_sdk/: __init__.py  types.py
sdk/aspora_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sdk/aspora_sdk/cli/: apply_cmd.py  approve_cmd.py  correct.py  create.py  describe_cmd.py  gateway.py  get_cmd.py  logs_cmd.py  (+8 more)
sdk/tests/: test_auth.py  test_cortex.py  test_eval_runner.py  test_feedback_loop.py  test_github_pr.py  test_incident_eval.py  test_mcp_registry.py  test_memory_store.py  test_memrl.py  test_openrouter.py  test_pg_store.py  test_synthesizer.py  test_verify.py
(+685 files in other folders)
