[project]
name = "wealth-copilot-agents"
version = "0.1.0"
description = "Pydantic AI agents for Wealth Copilot multi-domain platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-ai>=0.0.14",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "deepeval>=1.0.0",
    "promptfoo>=0.60.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
